[gd_scene load_steps=8 format=2]

[ext_resource path="res://sceens/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://sceens/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://sceens/Boundary.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/ball_hit.wav" type="AudioStream" id=5]
[ext_resource path="res://sceens/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=7]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 354 )
speed = 750

[node name="ServePosition" type="Position2D" parent="."]
position = Vector2( 720, 384 )

[node name="RightBoundary" parent="." instance=ExtResource( 4 )]
position = Vector2( 960, 0 )
rotation = 1.5708

[node name="TopBoundary" parent="." instance=ExtResource( 4 )]
position = Vector2( 50, 0 )

[node name="BottomBoundary" parent="." instance=ExtResource( 4 )]
position = Vector2( 50, 758 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 214.32, 158.992 )
speed = 750

[node name="BallHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Gameover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="hit_paddle" from="Ball" to="." method="_on_Ball_hit_paddle"]
[connection signal="out_of_bounds" from="Ball" to="." method="_on_Ball_out_of_bounds"]
